# airesim

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml
.github/workflows/: test.yml
airesim/: __init__.py  adaptive.py  coordinator.py  params.py  plotting.py  policies.py  pool.py  repairs.py  run.py  scheduler.py  scheduling_policies.py  server.py  simulator.py  stats.py  sweep.py
docs/: 2D-HEAT_MAP_REPORT.md  ARCHITECTURE.md  DIAGNOSIS_SWEEP_REPORT.md  RETIREMENT_POLICY_REPORT.md  SCHEDULING_COMPARISON_REPORT.md  SIMULATION_REPORT.md  THRESHOLD_SENSITIVITY_REPORT.md  TUTORIAL.md
examples/: 2d_heatmap_sweep.py  diagnosis_sweep.py  generate_paper_figures.py  paper_table1_sweep.py  retirement_payoff.py  retirement_sweep.py  scheduling_comparison.py  scored_sweep.py  scored_vs_threshold.py  stress_scenario.py  threshold_sensitivity.py
examples/2d_heatmap_figures/: heatmap_report.md
tests/: test_airesim.py  test_diagnosis_probability.py  test_edge_cases.py  test_scheduling_policies.py  test_scored_removal.py
