[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "airesim"
version = "0.1.0"
description = "Discrete-event simulator for large-scale AI cluster reliability modeling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "simpy>=4.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = [
    "matplotlib>=3.5",
    "pytest>=7.0",
]

[project.scripts]
airesim = "airesim.run:main"

[tool.setuptools.packages.find]
include = ["airesim*"]
